--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 html {
-  background-color: #7DFDFE;
-  background-image: -webkit-linear-gradient(65deg, #7DFDFE 50%, #CCFFFF 50%);
+  background-color:#F0F8FF;
+   background-image: linear-gradient(#20B2AA, #F0FFF0);
   min-height: 1000px;
   font-family: 'helvetica neue';
 }
