--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 html {
   background-color:#F0F8FF;
    background-image: linear-gradient(#20B2AA, #F0FFF0);
-  min-height: 1000px;
+  height: auto;
   font-family: 'helvetica neue';
 }
 
