--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 html {
-  background-color:#F0F8FF;
-   background-image: linear-gradient(#20B2AA, #F0FFF0);
+  background-color:#20B2AA;
+   
   height: auto;
   font-family: 'helvetica neue';
 }
